# system-monitor-app

./: .gitignore  README.md  deno.json  package.json  tailwind.config.ts
src/: App.css  App.tsx  interfaces.ts  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  monitor.rs  monitor_gpu.rs  tray.rs
src/components/: cpu.tsx  disk.tsx  memory.tsx  network.tsx  system.tsx
src/componets/cpu/: index.tsx
src/componets/disk/: index.tsx
src/componets/memory/: index.tsx
src/componets/network/: index.tsx
src/componets/system/: index.tsx
