[package]
name = "system-monitor-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "system_monitor_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.29"
tokio = { version = "1.46.1", features = ["time"] }
time = "0.3.41"
wgpu = "0.19"
glob = "0.3"
nvml-wrapper = { version = "0.9", optional = true }

[features]
default = []
nvml = ["nvml-wrapper"]

# Para diferentes plataformas
[target.'cfg(target_os = "linux")'.dependencies]
# Dependências específicas do Linux se necessário

[target.'cfg(target_os = "windows")'.dependencies]
# Dependências específicas do Windows se necessário

[target.'cfg(target_os = "macos")'.dependencies]
# Dependências específicas do macOS se necessário
